[package]
name = "x11rb"
version = "0.6.0"
description = "Rust bindings to X11"
authors = [
    "Uli Schlachter <psychon@znc.in>",
    "Eduardo Sánchez Muñoz <esm@eduardosm.net>",
]
repository = "https://github.com/psychon/x11rb"
readme = "README.md"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["xcb", "X11"]
exclude = [
    "/xcb-proto-1.14-1-g2b3559c",
    "/Makefile",
    "/.mergify.yml",
    "/appveyor.yml",
]

[dependencies]
libc = { version = "0.2", optional = true }
gethostname = "0.2.1"

[target.'cfg(unix)'.dependencies]
nix = "0.17"

[target.'cfg(windows)'.dependencies]
winapi-wsapoll = "0.1.0"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["winsock2"]

[features]
# Without this feature, all uses of `unsafe` in the crate are forbidden via
# #![deny(unsafe_code)]. This has the effect of disabling the XCB FFI bindings.
allow-unsafe-code = ["libc"]

# Enable utility functions in `x11rb::cursor` for loading mouse cursors.
cursor = ["render"]

# Enable utility functions in `x11rb::image` for working with image data.
image = []

# Enable this feature to enable all the X11 extensions
all-extensions = [
    "composite",
    "damage",
    "dpms",
    "dri2",
    "dri3",
    "glx",
    "present",
    "randr",
    "record",
    "render",
    "res",
    "screensaver",
    "shape",
    "shm",
    "sync",
    "xevie",
    "xf86dri",
    "xf86vidmode",
    "xfixes",
    "xinerama",
    "xinput",
    "xkb",
    "xprint",
    "xselinux",
    "xtest",
    "xv",
    "xvmc",
]

# Features to enable individual X11 extensions
composite = ["xfixes"]
damage = ["xfixes"]
dpms = []
dri2 = []
dri3 = []
glx = []
present = ["randr", "xfixes", "sync"]
randr = ["render"]
record = []
render = []
res = []
screensaver = []
shape = []
shm = []
sync = []
xevie = []
xf86dri = []
xf86vidmode = []
xfixes = ["render", "shape"]
xinerama = []
xinput = ["xfixes"]
xkb = []
xprint = []
xselinux = []
xtest = []
xv = ["shm"]
xvmc = ["xv"]

[package.metadata.docs.rs]
features = [ "all-extensions", "cursor" ]

[[example]]
name = "generic_events"
required-features = ["present"]

[[example]]
name = "shared_memory"
required-features = ["libc", "shm"]

[[example]]
name = "xeyes"
required-features = ["shape"]

[[example]]
name = "simple_window"
required-features = ["cursor"]

[[example]]
name = "display_ppm"
required-features = ["image"]

[workspace]
members = ["generator", "xcbgen-rs", "cairo-example", "xtrace-example"]
