[package]
name = "cairo-example"
version = "0.0.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.x11rb]
path = "../"
features = ["allow-unsafe-code"]

[dependencies.cairo-rs]
version = "0.8"
features = ["xcb"]
