[package]
name = "cairo-example"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.x11rb]
path = "../x11rb"
features = ["allow-unsafe-code", "render"]

[dependencies.cairo-rs]
version = "0.16"
features = ["xcb"]
