[package]
name = "x11rb-protocol"
version = "0.9.0"
description = "Rust bindings to X11"
authors = [
    "Uli Schlachter <psychon@znc.in>",
    "Eduardo Sánchez Muñoz <eduardosm-dev@e64.io>",
    "notgull <jtnunley01@gmail.com>",
]
repository = "https://github.com/psychon/x11rb"
readme = "../README.md"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["xcb", "X11"]

[dependencies]

[dev-dependencies]
criterion = "0.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.24", optional = true }

[features]
default = ["std"]
std = ["nix"]

# Enable utility functions in `x11rb::resource_manager` for querying the
# resource databases.
resource_manager = ["std"]

# Features to enable individual X11 extensions
composite = ["xfixes"]
damage = ["xfixes"]
dpms = []
dri2 = []
dri3 = ["std"]
glx = []
present = ["randr", "xfixes", "sync"]
randr = ["render", "std"]
record = []
render = []
res = []
screensaver = []
shape = []
shm = ["std"]
sync = []
xevie = []
xf86dri = []
xf86vidmode = []
xfixes = ["render", "shape"]
xinerama = []
xinput = ["xfixes"]
xkb = []
xprint = []
xselinux = []
xtest = []
xv = ["shm"]
xvmc = ["xv"]

[[bench]]
name = "proto_connection"
harness = false