[package]
name = "x11rb-protocol"
version = "0.12.0"
description = "Rust bindings to X11"
authors = [
    "Uli Schlachter <psychon@znc.in>",
    "Eduardo Sánchez Muñoz <eduardosm-dev@e64.io>",
    "notgull <jtnunley01@gmail.com>",
]
repository = "https://github.com/psychon/x11rb"
readme = "../README.md"
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
keywords = ["xcb", "X11"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.4"

[target.'cfg(unix)'.dependencies.nix]
version = "0.26"
default-features = false
features = ["fs"]
optional = true

[features]
default = ["std"]
std = ["nix"]

# Enable utility functions in `x11rb::resource_manager` for querying the
# resource databases.
resource_manager = ["std"]

# Enable this feature to enable all the X11 extensions
all-extensions = [
    "composite",
    "damage",
    "dbe",
    "dpms",
    "dri2",
    "dri3",
    "glx",
    "present",
    "randr",
    "record",
    "render",
    "res",
    "screensaver",
    "shape",
    "shm",
    "sync",
    "xevie",
    "xf86dri",
    "xf86vidmode",
    "xfixes",
    "xinerama",
    "xinput",
    "xkb",
    "xprint",
    "xselinux",
    "xtest",
    "xv",
    "xvmc",
]

# Features to enable individual X11 extensions
composite = ["xfixes"]
damage = ["xfixes"]
dbe = []
dpms = []
dri2 = []
dri3 = []
glx = []
present = ["randr", "xfixes", "sync"]
randr = ["render"]
record = []
render = []
res = []
screensaver = []
shape = []
shm = []
sync = []
xevie = []
xf86dri = []
xf86vidmode = []
xfixes = ["render", "shape"]
xinerama = []
xinput = ["xfixes"]
xkb = []
xprint = []
xselinux = []
xtest = []
xv = ["shm"]
xvmc = ["xv"]

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "proto_connection"
harness = false
