[package]
name = "xkbcommon-example"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.x11rb]
path = "../x11rb"
features = ["allow-unsafe-code", "xkb"]

[dependencies.xkbcommon]
version = "0.7"
features = ["x11"]
