[package]
name = "xtrace-example"
version = "0.0.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "0.3"

[dependencies.x11rb]
path = "../"
features = ["all-extensions"]

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["async-await", "async-await-macro", "io", "std"]

[dependencies.futures-io]
version = "0.3"
default-features = false
