[package]
name = "xtrace-example"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "2.0"

[dependencies.x11rb-protocol]
path = "../x11rb-protocol"
features = ["all-extensions", "request-parsing"]

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["async-await", "async-await-macro", "io", "std"]

[dependencies.futures-io]
version = "0.3"
default-features = false
